# cloudflare-ufw-sync

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PYTHON_STYLE_CHANGES.md  README.md  SECURITY.md  branch_protection.json  docker-compose.yml  fix.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_functionality.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  codeql.yml  dependabot.yml  labeler.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-assign.yml  auto_assign_project.yml  ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  labeler.yml  publish.yml  semver.yml  tests.yml
config/: default.yml
scripts/: cloudflare-ufw-sync.service  install.sh  uninstall.sh
src/application/: config_manager.py  sync_service.py
src/cloudflare_ufw_sync/: __init__.py  cli.py  cloudflare.py  config.py  sync.py  ufw.py
src/domain/: exceptions.py  models.py
src/infrastructure/: cloudflare_client.py  ufw_manager.py
src/interfaces/: cli.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_cli.py  test_cloudflare.py  test_cloudflare_client.py  test_config.py  test_config_manager.py  test_domain_exceptions.py  test_domain_models.py  test_sync_service.py  test_ufw_manager.py
